--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"SSDP":"rgb","onOffAP":"1","ssid":"wifi","password":"pass","ssidAP":"RGB","passwordAP":"","timezone":"2","timeled":"50","times1":"00:00:00","times2":"00:00:00","time":"08:15:52","state":"0","rgb":"204,0,0","ip":""}
+{"SSDP":"rgb","ssid":"wifi","password":"pass","ssidAP":"RGB","passwordAP":"","timezone":"2","timeled":"50","times1":"00:00:00","times2":"00:00:00","time":"08:15:52","state":"0","rgb":"204,0,0","ip":""}
