--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"SSDP":"rgb","ssid":"wifi","password":"pass","ssidAP":"RGB","passwordAP":"","timezone":"2","timeled":"50","times1":"00:00:00","times2":"00:00:00","time":"08:15:52","state":"0","rgb":"204,0,0","ip":""}
+{"onOffAP":"0","SSDPName":"RGB","ssidAPName":"RGB","ssidAPPassword":"","ssidName":"home","ssidPassword":"i12345678","timezone":8,"times1":"00:00:00","times2":"00:00:00","DDNS":"http://dyndns.dk/opdat.php?name=smartroom&domain=dyndns.dk&pw=20fHZ2naLXOIY&silent=1"}
