--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"onOffAP":"0","SSDPName":"RGB","ssidAPName":"RGB","ssidAPPassword":"","ssidName":"home","ssidPassword":"i12345678","timezone":8,"times1":"00:00:00","times2":"00:00:00","DDNS":"http://dyndns.dk/opdat.php?name=smartroom&domain=dyndns.dk&pw=20fHZ2naLXOIY&silent=1"}
+{"onOffAP":"0","SSDPName":"RGB","ssidAPName":"RGB","ssidAPPassword":"","ssidName":"home","ssidPassword":"pass","timezone":8,"times1":"00:00:00","times2":"00:00:00","DDNS":""}
