Изменены переменные и исправлена ошибка в DDNS порте.

--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"onOffAP":"0","SSDPName":"RGB","ssidAPName":"RGB","ssidAPPassword":"","ssidName":"","ssidPassword":"","timezone":8,"times1":"","times2":"","DDNS":""}
+{"onOffAP":"0","ssdpName":"RGB","ssidAPName":"RGB","ssidApPass":"","ssidName":"Wifi","ssidPass":"","timeZone":8,"times1":"","times2":"","ddns":"","ddnsPort":8080,"lang":"ru"}
