PIR сенсором можно управлять с веб +- другие мелочи

--- a/data/config.save.json
+++ b/data/config.save.json
@@ -1,1 +1,1 @@
-{"ssdpName":"RGB","ssidApName":"RGB","ssidApPass":"","ssidName":"Wifi","ssidPass":"","timeZone":8,"times1":"","times2":"","ddns":"","ddnsPort":8080,"lang":"ru"}
+{"ssdpName":"RGB","ssidApName":"RGB","ssidApPass":"","ssidName":"Wifi","ssidPass":"","timeZone":8,"times1":"","times2":"","ddns":"","ddnsPort":8080,"lang":"ru","pirTime":0,"ledCount":15}
