Изменения на главной странице - очень сырая версия

--- a/data/config.save.json
+++ b/data/config.save.json
@@ -1,1 +1,1 @@
-{"ssdpName":"RGB","ssidApName":"RGB","ssidApPass":"","ssidName":"","ssidPass":"","timeZone":8,"times1":"","times2":"","ddns":"","ddnsPort":8080,"lang":"ru","pirTime":0,"ledCount":15}
+{"ssdpName":"RGB","space":"","ssidApName":"","ssidApPass":"","ssidName":"","ssidPass":"","timeZone":3,"lang":"ru","ddns":"","ddnsName":"","ddnsPort":8080,"pirTime":0,"mqtt_server":"","mqtt_port":1883,"mqtt_user":"","mqtt_pass":"","getway":"","subnet":"","dns":"","checkboxIP":0}
